--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,11 @@ li {
   font-family: var(--secondary-font);
   padding: var(--section-padding);
   letter-spacing: 1rem;
+  padding-bottom: 4rem;
+  
+}
+.move__hero{
+  margin-top: 12.5rem;
 }
 
 /* About Section  */
@@ -311,15 +316,16 @@ li {
 
 .gallery {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .gallery__item {
-  flex-basis: 25%;
+  flex-basis: 25%
 }
 
 .gallery__picture {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  /* height: 100%; */
 }
 
 /* ---------- Footer --------------- */
@@ -356,14 +362,34 @@ li {
 }
 
 .footer__item:hover {
-  color: var(--white-color) !important;
+color: var(--white-color) !important;
+}
+.footer__icon{
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  margin-top: 4rem;
+  color: var(--black-degraded) !important;
+  transition: var(--transition);
+  background-color: #90d4c5;
+}
+/* 
+.icon__list{
+  display: flex;
+  width: 15%;
+  align-items: center;
+} */
+.icon__item{
+width: 3%;
 }
 
 /* ------------------ Responsive ---------------------  */
 
+
 @media screen and (max-width: 1024px) {
   .nav__list {
     display: none;
+
   }
   .nav__hamburger {
     display: block;
@@ -376,17 +402,54 @@ li {
     padding: 9rem 1rem;
     text-align: center;
   }
+  .move__hero{
+    margin-top: 1.5rem;
+  }
 
+  .about{
+    display: flex;
+    flex-wrap: nowrap;
+    margin:0
+  }
   .about__title {
-    font-size: 3rem;
+    font-size: 2rem;
+  }
+  .description__container{
+    text-align: center;
   }
   .about__text {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   }
 
   .about {
     flex-direction: column-reverse;
   }
+  .stand_out{
+    flex-direction:column;
+  }
+  .expertise__container{
+    display: grid;
+  }
+  .testimonies__container{
+display: grid;
+  }
+  .testimonie{
+    padding-bottom: 5rem;
+  }
+  .gallery__item {
+    flex-basis: 50%
+  }
+  .footer__list {
+    justify-content: center;
+    align-items: center;
+  }
+  .footer__icon{
+    margin-top: 2rem;
+  }
+ 
+  
+  
+  
 }
 
 @media screen and (min-width: 1025px) {
@@ -397,3 +460,5 @@ li {
     display: none;
   }
 }
+
+
